<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/background">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_add_meal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/add_meal_l_r_padding"
    android:paddingRight="@dimen/add_meal_l_r_padding">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addMeal"
        android:textSize="@dimen/AddNameSize"
        android:textStyle="bold"
        android:paddingTop="@dimen/nameTBPadding"
        android:paddingBottom="@dimen/nameTBPadding"
        android:paddingLeft="@dimen/item_lPadding"
        android:paddingRight="@dimen/item_rPadding"
        android:textColor="@color/white"/>
    <Spinner
        android:id="@+id/daySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        android:layout_marginTop="@dimen/text_margin"/>
    <EditText
        android:id="@+id/etAddMealName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/purple"
        android:textColorHint="@color/med_gray"
        android:hint="@string/addMealNameHint"/>
    <Spinner
        android:id="@+id/difficultySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        android:layout_marginTop="@dimen/text_margin"/>
    <Spinner
        android:id="@+id/timeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        android:layout_marginTop="@dimen/text_margin"/>
    <TextView
        android:id="@+id/tvAddIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="handleOnClick"
        android:clickable="true"
        android:textColor="@color/purple"
        android:text="Ingredients +"
        android:textSize="@dimen/add_ingredients_text"
        android:paddingTop="@dimen/nameTBPadding"
        android:paddingBottom="@dimen/nameTBPadding"
        android:paddingLeft="@dimen/item_lPadding"
        android:paddingRight="@dimen/item_rPadding"/>
    <EditText
        android:id="@+id/etMealDirections"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/purple"
        android:textColorHint="@color/med_gray"
        android:hint="@string/addMealDirectionsHint"
        android:layout_marginBottom="@dimen/button_margin"/>
    <Button
        android:id="@+id/bAddMeal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:textColor="@color/dark_purple"
        android:textSize="@dimen/NameSize"
        android:textStyle="bold"
        android:text="@string/addBtn"/>

</LinearLayout>
</ScrollView>
