<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/background">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_update_meal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/add_meal_l_r_padding"
        android:paddingRight="@dimen/add_meal_l_r_padding">
        <TextView
            android:id="@+id/tvUpdateMealLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Update meal"
            android:textSize="@dimen/AddNameSize"
            android:textStyle="bold"
            android:paddingTop="@dimen/nameTBPadding"
            android:paddingBottom="@dimen/nameTBPadding"
            android:paddingLeft="@dimen/item_lPadding"
            android:paddingRight="@dimen/item_rPadding"
            android:textColor="@color/white"/>
        <Spinner
            android:id="@+id/updateDaySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple"
            android:layout_marginTop="@dimen/text_margin"/>
        <EditText
            android:id="@+id/etUpdateMealName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/purple"
            android:textColorHint="@color/med_gray"
            android:hint="@string/addMealNameHint"/>
        <Spinner
            android:id="@+id/updateDifficultySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple"
            android:layout_marginTop="@dimen/text_margin"/>
        <Spinner
            android:id="@+id/updateTimeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple"
            android:layout_marginTop="@dimen/text_margin"/>
        <TextView
            android:id="@+id/tvUpdateIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="handleOnClick"
            android:clickable="true"
            android:textColor="@color/purple"
            android:text="Ingredients +"
            android:textSize="@dimen/add_ingredients_text"
            android:paddingTop="@dimen/nameTBPadding"
            android:paddingBottom="@dimen/nameTBPadding"
            android:paddingLeft="@dimen/item_lPadding"
            android:paddingRight="@dimen/item_rPadding"/>
        <EditText
            android:id="@+id/etUpdateMealDirections"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterDifficulty"
            android:textColor="@color/purple"
            android:textColorHint="@color/med_gray"
            android:inputType="text|textMultiLine|textCapSentences"
            android:maxLength="165"
            android:gravity="left"
            android:maxLines="5"
            android:layout_marginBottom="@dimen/button_margin"/>
        <Button
            android:id="@+id/bUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/Save"
            android:textColor="@color/dark_purple"
            android:textSize="@dimen/NameSize"
            android:textStyle="bold"/>
    </LinearLayout>
</ScrollView>